<?xml version="1.0" encoding="utf-8"?>
<!--
    Temporedit
    Copyright (C) 2019 Appgramming. All rights reserved.
    https://www.appgramming.com
-->

<resources>

    <!-- App and activity names -->
    <string name="app_name">Temporedit</string>
    <string name="activity_settings_label">Settings</string>

    <!-- ****************************************************************** -->
    <!-- User interface                                                     -->
    <!-- ****************************************************************** -->

    <!-- Action bar items -->
    <string name="action_copy">Copy all</string>
    <string name="action_cut">Cut all</string>
    <string name="action_share">Share all</string>
    <string name="action_clear">Clear</string>
    <string name="action_paste">Paste &amp; replace</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate">Rate app</string>
    <string name="action_rate_url">market://details?id=com.appgramming.temporedit</string>
    <string name="action_help">Help</string>
    <string name="action_help_url">https://www.appgramming.com/temporedit/</string>

    <!-- Dialogs and popups -->
    <string name="share_title">Share text</string>

    <!-- ****************************************************************** -->
    <!-- Preferences                                                        -->
    <!-- ****************************************************************** -->

    <!-- App state -->
    <string name="pref_text_key">pref_text_key</string>

    <!-- Text preferences category -->
    <string name="pref_category_text_title">Text</string>

    <!-- Text -> Typeface preference -->
    <string name="pref_typeface_key">pref_typeface_key</string>
    <string name="pref_typeface_title">Typeface</string>
    <string name="pref_typeface_summary">%s</string>
    <string name="pref_typeface_evalue_default">Default</string>
    <string name="pref_typeface_evalue_monospace">Monospace</string>
    <string name="pref_typeface_evalue_sans_serif">Sans serif</string>
    <string name="pref_typeface_evalue_serif">Serif</string>

    <!-- Text -> Font style preference -->
    <string name="pref_font_style_key">pref_font_style_key</string>
    <string name="pref_font_style_title">Font style</string>
    <string name="pref_font_style_summary">%s</string>
    <string name="pref_font_style_evalue_normal">Normal</string>
    <string name="pref_font_style_evalue_bold">Bold</string>
    <string name="pref_font_style_evalue_italic">Italic</string>
    <string name="pref_font_style_evalue_bold_italic">Bold Italic</string>

    <!-- Text -> Font size preference -->
    <string name="pref_font_size_key">pref_font_size_key</string>
    <string name="pref_font_size_title">Font size</string>
    <string name="pref_font_size_summary">%s sp</string>
    <string name="pref_font_size_evalue_18">18</string>

    <!-- Text -> Line spacing preference -->
    <string name="pref_line_spacing_key">pref_line_spacing_key</string>
    <string name="pref_line_spacing_title">Line spacing</string>
    <string name="pref_line_spacing_summary">%s</string>
    <string name="pref_line_spacing_value_1_0">1.0</string>

    <!-- Colors preferences category -->
    <string name="pref_category_colors_title">Colors</string>

    <!-- Colors -> Background color preference -->
    <string name="pref_editor_background_color_key">pref_editor_background_color_key</string>
    <string name="pref_editor_background_color_title">Background color</string>
    <string name="pref_editor_background_color_default">#ffffffff</string>

    <!-- Colors -> Text color preference -->
    <string name="pref_editor_text_color_key">pref_editor_text_color_key</string>
    <string name="pref_editor_text_color_title">Text Color</string>
    <string name="pref_editor_text_color_default">#ff000000</string>

    <!-- Colors -> App theme preference -->
    <string name="pref_theme_title">App theme</string>
    <string name="pref_theme_summary">%s</string>
    <string name="pref_theme_key">pref_theme_key</string>
    <string name="pref_theme_evalue_light">Light</string>
    <string name="pref_theme_evalue_white">White</string>
    <string name="pref_theme_evalue_dark">Dark</string>
    <string name="pref_theme_evalue_black">Black</string>

</resources>
