<?xml version="1.0" encoding="utf-8"?>
<!--
    Temporedit
    Copyright (C) 2019 Appgramming. All rights reserved.
    https://www.appgramming.com
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_24dp"
        android:showAsAction="always"
        android:title="@string/action_copy" />
    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_content_cut_24dp"
        android:showAsAction="always"
        android:title="@string/action_cut" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_24dp"
        android:showAsAction="always"
        android:title="@string/action_share" />
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/action_clear" />
    <item
        android:id="@+id/action_paste"
        android:icon="@drawable/ic_content_paste_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/action_paste" />
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_rate"
        android:showAsAction="never"
        android:title="@string/action_rate" />
    <item
        android:id="@+id/action_help"
        android:showAsAction="never"
        android:title="@string/action_help" />
</menu>